[gd_scene load_steps=7 format=3 uid="uid://bso267xxj7xyu"]

[ext_resource type="Texture2D" uid="uid://dgehjwyhuyce3" path="res://Assets/UI/play_normal.png" id="1_81dok"]
[ext_resource type="Script" path="res://Scenes/main_menu.gd" id="1_w2bp2"]
[ext_resource type="Texture2D" uid="uid://b8g1piewor7fk" path="res://Assets/UI/play_pressed.png" id="2_g51qs"]
[ext_resource type="PackedScene" uid="uid://b3qa6kdono8cy" path="res://Scenes/scene_transition.tscn" id="2_h8uvx"]
[ext_resource type="Texture2D" uid="uid://dfs2m76vitv7t" path="res://Assets/UI/exit_normal.png" id="3_emnqf"]
[ext_resource type="Texture2D" uid="uid://b2wjgvunbwh2x" path="res://Assets/UI/exit_pressed.png" id="4_d43fv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w2bp2")

[node name="MainMenuLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="MainMenuLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0470588, 0, 0.560784, 1)

[node name="Control" type="Control" parent="MainMenuLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="PlayButton" type="TextureButton" parent="MainMenuLayer/Control/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
texture_normal = ExtResource("1_81dok")
texture_pressed = ExtResource("2_g51qs")
ignore_texture_size = true
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="MainMenuLayer/Control/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
texture_normal = ExtResource("3_emnqf")
texture_pressed = ExtResource("4_d43fv")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MainMenuLayer/Control/VBoxContainer"]
layout_mode = 2
text = "Краткая справка по игре: 
W,A,S,D - ходить
ЛКМ - стрелять
ESC - пауза
"

[node name="SceneTransition" parent="." instance=ExtResource("2_h8uvx")]
layer = 0

[connection signal="pressed" from="MainMenuLayer/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenuLayer/Control/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
